--- a/pak/Fighter jets.html
+++ b/pak/Fighter jets.html
@@ -72,7 +72,7 @@
               <img src="img/mirage-iii.webp" class="card-img-top jet-img" alt="Mirage III">
               <div class="card-body">
                 <h5 class="card-title">Mirage III</h5>
-                <p class="card-text">Supersonic jet aircraft designed in France and used by PAF.</p>
+                <p class="card-text">Supersonic jet aircraft used by PAF.</p>
               </div>
             </div>
           </div>
